--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,18 @@
 {
-  "compilerOptions": { 
-    "target": "es6",                                  
-    "module": "commonjs",                                
-    "esModuleInterop": true, 
-    "allowJs": true,           
+  "compilerOptions": {
+    "target": "es6",
+    "module": "commonjs",
+    "esModuleInterop": true,
+    "allowJs": true,
     "outDir": "./dist",
-    "rootDir": "./src/js",                 
-    "forceConsistentCasingInFileNames": true,            
-    "strict": true,                                      
-    "skipLibCheck": true                   
+    "rootDir": "./src/js",
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "skipLibCheck": true,
+
+    
+    "noImplicitAny": true,
+    "noEmitOnError":true
   },
-  "include":["src/**/*"]
+  "include": ["src/**/*"]
 }
